# kokoa86

./: .gitignore  Cargo.toml  README.md
crates/kokoa86-cli/: Cargo.toml
crates/kokoa86-cli/src/: main.rs
crates/kokoa86-core/: Cargo.toml
crates/kokoa86-core/src/: demo.rs  diag.rs  jit.rs  lib.rs  machine.rs
crates/kokoa86-core/tests/: bios_boot_diag.rs  device_integration.rs  integration.rs
crates/kokoa86-cpu/: Cargo.toml
crates/kokoa86-cpu/src/: decode.rs  descriptor.rs  execute.rs  flags.rs  lib.rs  modrm.rs  regs.rs
crates/kokoa86-cpu/tests/: flags_tests.rs  instruction_tests.rs  phase2_tests.rs
crates/kokoa86-dev/: Cargo.toml
crates/kokoa86-dev/src/: ata.rs  cmos.rs  fw_cfg.rs  lib.rs  misc.rs  pci.rs  pic.rs  pit.rs  port_bus.rs  ps2.rs  serial.rs  vga.rs
crates/kokoa86-dev/tests/: port_bus_tests.rs  serial_tests.rs
crates/kokoa86-gui/: Cargo.toml
crates/kokoa86-gui/src/: main.rs
crates/kokoa86-mem/: Cargo.toml
crates/kokoa86-mem/src/: bus.rs  lib.rs  ram.rs
