[workspace]
members = [
    "crates/kokoa86-cpu",
    "crates/kokoa86-mem",
    "crates/kokoa86-dev",
    "crates/kokoa86-core",
    "crates/kokoa86-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
bitflags = "2"
clap = { version = "4", features = ["derive"] }
